[modernize] Use Byte.valueOf instead of new Byte